# ChangeLog for app-xemacs/gentoo-syntax
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Aug 2007; Hans de Graaff <graaff@gentoo.org> +gentoo-syntax-1.6-r1.ebuild 
  +files/gentoo-syntax-1.6-xemacs.patch:
  Remove font-lock-keywords code from the patch now that there is a version of
  xemacs 21.4 in the tree that supports it. Also remove silly whitespace-only
  patching.

  25 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  gentoo-syntax-1.6.ebuild:
  install ChangeLog file; remove Header info; remove a pair of quotes which
  could become dangerous
