@@ -7,6 +7,7 @@ MD5 392149718698013554a5f94b6f408a36 files/gentoo-syntax-xemacs.patch 21555
 RMD160 a98d1bb5f89339b6c5af85931f9af41d26ef0199 files/gentoo-syntax-xemacs.patch 21555
 SHA256 7fcd94fac0644f85591754036bb3df679523672bc8bbd1a8c9a8fe2357bb80ef files/gentoo-syntax-xemacs.patch 21555
 DIST gentoo-syntax-1.6.tar.bz2 4727 RMD160 6f977fbd63602b0d3a7594914ce850886071693a SHA1 4bf86a5b65a1f2dcdd12dfdd612ac6977bf2b45a SHA256 35f5d634e8c34d4f266e371ddd967aeb07f29548390b1d17fdf02e6e0bc34e50
+DIST gentoo-syntax-1.7.tar.bz2 8991 RMD160 0b414cedfc86fcb053bace133696027329144ed6 SHA1 caeea311c6503f96de063dd66d79e434fe459d65 SHA256 cc17d71349607410f00f52827e765703e14edde42d74c7d6b8b17711b3a4e62d
 EBUILD gentoo-syntax-1.6-r1.ebuild 638 RMD160 370d55c59c8882096b45de645afcbbaf638fd001 SHA1 226c2040a0ec6b3b21ae9320c2b4e54faa10a867 SHA256 59306038452e58fd64c9dcdc469895964dc9b5ec64f33418f3a0d88f1f8f1f5e
 MD5 a43756e0b6cec142a3c340c1f5eb471e gentoo-syntax-1.6-r1.ebuild 638
 RMD160 370d55c59c8882096b45de645afcbbaf638fd001 gentoo-syntax-1.6-r1.ebuild 638
@@ -15,13 +16,20 @@ EBUILD gentoo-syntax-1.6.ebuild 663 RMD160 f0a4a594f5bf1366ed417f59e77a2cfd147c8
 MD5 1a7976d0f741087847ab844f29ffa498 gentoo-syntax-1.6.ebuild 663
 RMD160 f0a4a594f5bf1366ed417f59e77a2cfd147c847f gentoo-syntax-1.6.ebuild 663
 SHA256 cddc4f3ecba3beb1987ac135b6171a6943606489360d9569514d48e3903b102d gentoo-syntax-1.6.ebuild 663
-MISC ChangeLog 601 RMD160 0922f0cae4ab27655e6a2835c85f66344502c7ea SHA1 ae95d56a3cd5d39437497001dfcc75881927e683 SHA256 08794829f470963965363f59ff10ab212145a7688e061c30ea665f542dd41a3c
-MD5 9c198c40da233d60ae2a0c224f10786e ChangeLog 601
-RMD160 0922f0cae4ab27655e6a2835c85f66344502c7ea ChangeLog 601
-SHA256 08794829f470963965363f59ff10ab212145a7688e061c30ea665f542dd41a3c ChangeLog 601
+EBUILD gentoo-syntax-1.7.ebuild 432 RMD160 253fac55d0dc3d8c14485f0c7dc677b491c63b74 SHA1 e9e49539613fdde2d48481bcedf1fd02213fe20e SHA256 5d8db1e48739701998e14b6756e15d319d665b9514f6d725955837f973f5baaa
+MD5 f9a95d00182d2f12e8325268f554d53d gentoo-syntax-1.7.ebuild 432
+RMD160 253fac55d0dc3d8c14485f0c7dc677b491c63b74 gentoo-syntax-1.7.ebuild 432
+SHA256 5d8db1e48739701998e14b6756e15d319d665b9514f6d725955837f973f5baaa gentoo-syntax-1.7.ebuild 432
+MISC ChangeLog 743 RMD160 b8ac5978ad1d0fe15748781e7e08fb7d4fb4e8de SHA1 a048671fad41e62e0f5e2edec3d815e06e621f00 SHA256 2836e1eae855235951aa6d3220b00801db0460710d88297757085b3f47f05154
+MD5 75124b13ae5d0a6535e3448f81af9ae5 ChangeLog 743
+RMD160 b8ac5978ad1d0fe15748781e7e08fb7d4fb4e8de ChangeLog 743
+SHA256 2836e1eae855235951aa6d3220b00801db0460710d88297757085b3f47f05154 ChangeLog 743
 MD5 286b381554ac58f63c4d667ac452f4a2 files/digest-gentoo-syntax-1.6 250
 RMD160 d6e7bcdf753a0d420a87f19014af89316359e9ee files/digest-gentoo-syntax-1.6 250
 SHA256 1f55eb9c9087c1737ae4943ccced1ac2448b9cee8ce0c988b7c26b4b972c92e3 files/digest-gentoo-syntax-1.6 250
 MD5 286b381554ac58f63c4d667ac452f4a2 files/digest-gentoo-syntax-1.6-r1 250
 RMD160 d6e7bcdf753a0d420a87f19014af89316359e9ee files/digest-gentoo-syntax-1.6-r1 250
 SHA256 1f55eb9c9087c1737ae4943ccced1ac2448b9cee8ce0c988b7c26b4b972c92e3 files/digest-gentoo-syntax-1.6-r1 250
+MD5 0661dd7a26eb9a1fe46166ce61c963dd files/digest-gentoo-syntax-1.7 250
+RMD160 f9329ac387d10454671624fbb9fee53d3d00eab6 files/digest-gentoo-syntax-1.7 250
+SHA256 b572a50dbdf4cd24262f9c7c725ed3b4a8208506367e8c2d7fb4361de119fcca files/digest-gentoo-syntax-1.7 250
