@@ -1,0 +1,3 @@
+MD5 3dc18747b777f5c80b196de5201f993f gentoo-syntax-1.7.tar.bz2 8991
+RMD160 0b414cedfc86fcb053bace133696027329144ed6 gentoo-syntax-1.7.tar.bz2 8991
+SHA256 cc17d71349607410f00f52827e765703e14edde42d74c7d6b8b17711b3a4e62d gentoo-syntax-1.7.tar.bz2 8991
