@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Sep 2007; Hans de Graaff <graaff@gentoo.org> +gentoo-syntax-1.7.ebuild:
+  Version bump, no longer need to apply special XEmacs patches.
+
   04 Aug 2007; Hans de Graaff <graaff@gentoo.org> +gentoo-syntax-1.6-r1.ebuild 
   +files/gentoo-syntax-1.6-xemacs.patch:
   Remove font-lock-keywords code from the patch now that there is a version of
